[metadata]
name = openssh_key_parser
version = 0.0.5
author = Scott C Wang
author_email = wangsc@cs.wisc.edu
description = Parse and pack OpenSSH private and public key files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/scottcwang/openssh_key_parser
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires =
    >=3.10
install_requires =
    bcrypt>=3.0.0
    cryptography

[options.extras_require]
test =
    pytest>=6.0.0
    pytest-cov
    pytest-pylint
    pytest-mock
    pytest-mypy
    pynacl
    sphinx>=3.0.0
    sphinx-autodoc-typehints
